--- a/aboutme.html
+++ b/aboutme.html
@@ -38,6 +38,12 @@
         h2 {
             margin-top: 20px;
         }
+        .navbar {
+      background-color: #333;
+      padding: 10px;
+      text-align: center;
+    }
+
     </style>
 </head>
 <body>
@@ -60,5 +66,6 @@
             <li>Data Structure in C </li>
         </ul>
     </section>
+      <div class="navbar"></div><button onclick="window.location.href='jobboard.html'">Job Board</button></div>
 </body>
 </html>
