--- a/aboutme.html
+++ b/aboutme.html
@@ -43,7 +43,10 @@
       padding: 10px;
       text-align: center;
     }
-
+/* Resume button */
+        .resume {
+            text-align: center;
+        }
     </style>
 </head>
 <body>
@@ -66,6 +69,9 @@
             <li>Data Structure in C </li>
         </ul>
     </section>
-      <div class="navbar"></div><button onclick="window.location.href='jobboard.html'">Job Board</button></div>
+      <section class="resume">
+        <h2>Download My Resume</h2>
+        <a href="resume.pdf" download>Download PDF</a>
+    </section>
 </body>
 </html>
