--- a/aboutme.html
+++ b/aboutme.html
@@ -71,7 +71,7 @@
     </section>
       <section class="resume">
         <h2>Download My Resume</h2>
-        <a href="resume.pdf" download>Download PDF</a>
+        <p><a href="resume.pdf" download><button>Download Resume</button></a></p>
     </section>
 </body>
 </html>
